LinkedListDeque pass all tests